# csview

./: .gitignore  Cargo.toml  LICENSE  README.md  feature_ideas.md  index-ai.html  index.html  need_from_human.md  package.json  pnpm-lock.yaml  tsconfig.ai.json  tsconfig.json  vite.config.ai.ts  vite.config.ts
csview-engine/: Cargo.toml
csview-engine/src/: chart.rs  engine.rs  join.rs  lib.rs  quality.rs  sqlite_store.rs  stats_extended.rs
csview-engine/src/expr/: ast.rs  eval.rs  mod.rs
docs/: index.html
samples/: employees.csv
scripts/: release.sh
src/: App.tsx  styles.css
src-ai/: App.tsx  ai-styles.css  main.tsx
src-ai/components/: AISidebar.tsx  AccountPanel.tsx  AnomalyPanel.tsx  ChartView.test.tsx  ChartView.tsx  ChatPanel.tsx  CompliancePanel.tsx  ForecastPanel.tsx  JoinPanel.tsx  ProfilePanel.tsx  QualityPanel.tsx  QueryPanel.tsx  ReportPanel.tsx  SimpleMarkdown.tsx  TransformPanel.tsx
src-ai/lib/: api-ai.test.ts  api-ai.ts  types-ai.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-ai/: Cargo.toml  tauri.conf.json
src-tauri-ai/capabilities/: default.json
src-tauri-ai/icons/: icon.icns
src-tauri-ai/src/: commands_ai.rs  commands_csv.rs  lib.rs  main.rs  menu.rs  state.rs
src-tauri-ai/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri-ai/src/llm/: client.rs  mod.rs  prompts.rs  types.rs
src-tauri-ai/tests/: ai_features_integration.rs  auto_detect_keys.rs  chart_tool_e2e.rs
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  engine.rs  lib.rs  main.rs  menu.rs
src/components/: DataGrid.test.tsx  DataGrid.tsx  RowPanel.test.tsx  RowPanel.tsx  StatsPanel.test.tsx  StatsPanel.tsx  ThemeMenu.tsx
src/lib/: api.ts  clipboard.test.ts  clipboard.ts  config.ts  format.test.ts  format.ts  highlight.test.tsx  highlight.tsx  history.test.ts  history.ts  palettes.ts  rangeCache.test.ts  rangeCache.ts  theme.test.ts  theme.ts  types.ts
src/test/: setup.ts
