[package]
name = "csview-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
thiserror = "1"
memmap2 = "0.9"
parking_lot = "0.12"
rayon = "1.10"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.14"
