[package]
name = "csview"
version = "0.1.0"
description = "A Tauri CSV viewer for macOS"
authors = ["csview"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "csview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-cli = "2.0"
tauri-plugin-clipboard-manager = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
memmap2 = "0.9"
parking_lot = "0.12"
uuid = { version = "1.11", features = ["v4"] }
anyhow = "1"
thiserror = "1"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.14"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
